[project]
name = "MCPTools"
version = "0.0.1"
authors = [
  { name="Josh Famestad", email="josh@famestad.com" },
]
description = "MCP server tools"
readme = "README.md"
requires-python = ">=3.12"
license="Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "pkg/*.py",
  "/tests",
]
exclude = [
  "*.json",
  "pkg/_compat.py",
]

[project.scripts]
observer = "observation_extractor.main:run"